fix contrast

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -32,7 +32,7 @@ header {
 }
 
 #index {
-	background: url(../../images/DSC_6346--2.jpg) 50% 0%/cover no-repeat;
+	background: #853866 url(../../images/DSC_6346--2.jpg) 50% 0%/cover no-repeat;
 	overflow: hidden;
 }
 
@@ -45,23 +45,22 @@ header {
 }
 
 #index .site-name {
-	color: #f9f9f9;
+	color: #fff;
 }
 
 .site-name h1, h2 {
 	margin: 0;
+	font-weight: 400;
 }
 
 .site-name h1 {
 	line-height: 1;
 	font-family: 'Marck Script', sans-serif;
 	font-size: 3em;
-	font-weight: 400;
 }
 
 .site-name h2 {
-	font-size: 1.1em;
-	font-weight: 100;
+	font-size: 1.2em;
 }
 
 .navbar {
@@ -77,7 +76,7 @@ header {
 }
 
 #index .navbar a {
-	color: #f9f9f9;
+	color: #fff;
 	font-family: 'Marck Script', sans-serif;
 }
 
@@ -154,7 +153,7 @@ main {
 }
 
 #about .first-letter {
-	color: #af5f8f;
+	color: #853866;
 	font-family: 'Marck Script', sans-serif;
 	font-size: 3em;
 }
@@ -169,8 +168,8 @@ main {
 	width: 100%;
 }
 
-.portfolio-icon h6 {
-	color: #af5f8f;
+.portfolio-icon h3 {
+	color: #853866;
 	font-family: 'Marck Script', sans-serif;
 	font-size: 1.3em;
 	margin: 0 0 1em 0;
@@ -196,12 +195,13 @@ main {
 }
 
 #contacts a {
-	color: #af5f8f;
+	color: #853866;
+	font-size: 1.1em;
 }
 
 footer {
 	background-color: #c471a3;
-	border-top: 2px solid #af5f8f;
+	border-top: 2px solid #853866;
 	min-height: 3.5em;
 	position: relative;
 	width: 100%;
@@ -237,7 +237,7 @@ footer {
 
 .copyright a {
 	height: 27px;
-	margin-top: 0.8em;
+	margin-top: 0.9em;
 	vertical-align: middle;
 	width: 27px;
 }
@@ -246,7 +246,7 @@ footer {
 	color: #fff;
 	display: inline-block;
 	float: right;
-	font-size: 0.9em;
+	font-size: 1em;
 	margin: 1.25em 1em 1em 0.3em;
 	vertical-align: middle;
 }
@@ -260,11 +260,11 @@ footer {
 }
 
 .photo-header .site-name {
-	color: #af5f8f;
+	color: #853866;
 }
 
 .photo-header .navbar a {
-	color: #af5f8f;
+	color: #853866;
 	font-size: 1.2em;
 	padding: 0.9em 0 0.9em 0.5em;
 }
